change to setuptools in accordance with migration guide

--- a/package.xml
+++ b/package.xml
@@ -49,6 +49,8 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
+  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>
   <depend>rospy</depend>
   <depend condition="$ROS_PYTHON_VERSION == 2">python-pytest</depend>
   <depend condition="$ROS_PYTHON_VERSION == 3">python3-pytest</depend>
